examples/invalid/stringForInt.ccs
X[n] := out!n.X[n+1];

X[a]
